--- a/package.json
+++ b/package.json
@@ -11,15 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "chart.js": "^4.4.7",
-    "chartjs-adapter-moment": "^1.0.1",
-    "chartjs-chart-financial": "^0.2.1",
     "react": "^18.3.1",
-    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-gauge-chart": "^0.5.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.0.2",
-    "recharts": "^2.15.0"
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
